--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "devDependencies": {
         "grunt": "~0.4.2",
         "grunt-contrib-jshint": "~0.6.3",
+        "grunt-contrib-concat": ">=0.4.0",
         "grunt-contrib-uglify": ">=0.2.2",
-        "grunt-git-describe": "~2.0.2",
-        "grunt-contrib-clean": ">=0.4.1"
+        "grunt-contrib-clean": ">=0.4.1",
+        "grunt-replace": ">=0.7.7",
+        "grunt-contrib-watch": ">=0.6.1"
     }
 }
